Make TMUX open panes in current directory

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,9 +4,11 @@
 ############## NAVIGATION ##############
 ########################################
 
-# split panes using | and - kill using 0
-bind = split-window -h
-bind - split-window -v
+# split panes using - and = (+) and open to current path
+bind = split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
+
+# Kill panes using the "0" key
 bind-key 0 kill-pane
 
 unbind '"'
