Further adjustments for using touch typing

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -14,10 +14,15 @@ bind-key 0 kill-pane
 unbind '"'
 unbind %
 
-# Cycle forward and backward through panes
-unbind [
-bind-key ] select-pane -t +1
-bind-key [ select-pane -t -1
+# Pane movement in accordance with vim movements
+unbind j
+unbind k
+unbind h
+unbind l
+bind-key k select-pane -U
+bind-key j select-pane -D
+bind-key h select-pane -L
+bind-key l select-pane -R
 
 # Avoids confirmation when killing a window
 bind-key & kill-window
@@ -48,15 +53,15 @@ bind -T copy-mode-vi 'y' send-keys -X copy-selection
 ############### DISPLAY ################
 ########################################
 
-unbind Left
-unbind Down
-unbind Up
-unbind Right
-
-bind Up resize-pane -U 5
-bind Down resize-pane -D 5
-bind Right resize-pane -R 10
-bind Left resize-pane -L 10
+# Resize also using vim keys but for left hand
+unbind d 
+unbind a
+unbind s
+unbind f
+bind d resize-pane -U 5
+bind a resize-pane -L 10
+bind s resize-pane -D 5
+bind f resize-pane -R 10
 
 set -g default-terminal "screen-256color"
 
