--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -45,7 +45,7 @@ set -sg escape-time 1
 unbind p
 bind p paste-buffer
 bind -T copy-mode-vi 'v' send-keys -X begin-selection
-bind -T copy-mode-vi 'y' send-keys -X copy-selection
+bind-key C copy-mode-vi 'y' send-keys -X copy-selection
 
 
 
