change keymap for tmux and added keys for anyjump

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,6 +4,12 @@
 ############## NAVIGATION ##############
 ########################################
 
+# change leader key to G from ctrl G
+unbind C-b
+bind G send-prefix
+set-option -g prefix G
+
+
 # split panes using - and = (+) and open to current path
 bind = split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
